src/rules/flake8_tidy_imports/snapshots/ruff__rules__flake8_tidy_imports__tests__banned_api_true_positives.snap
---
source: src/rules/flake8_tidy_imports/mod.rs
expression: diagnostics
---
- kind:
    BannedApi:
      name: cgi
      message: The cgi module is deprecated.
  location:
    row: 2
    column: 7
  end_location:
    row: 2
    column: 10
  fix: ~
  parent: ~
- kind:
    BannedApi:
      name: cgi
      message: The cgi module is deprecated.
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 17
  fix: ~
  parent: ~
- kind:
    BannedApi:
      name: cgi
      message: The cgi module is deprecated.
  location:
    row: 6
    column: 0
  end_location:
    row: 6
    column: 23
  fix: ~
  parent: ~
- kind:
    BannedApi:
      name: cgi
      message: The cgi module is deprecated.
  location:
    row: 9
    column: 7
  end_location:
    row: 9
    column: 18
  fix: ~
  parent: ~
- kind:
    BannedApi:
      name: cgi
      message: The cgi module is deprecated.
  location:
    row: 11
    column: 0
  end_location:
    row: 11
    column: 23
  fix: ~
  parent: ~
- kind:
    BannedApi:
      name: cgi
      message: The cgi module is deprecated.
  location:
    row: 13
    column: 0
  end_location:
    row: 13
    column: 25
  fix: ~
  parent: ~
- kind:
    BannedApi:
      name: typing.TypedDict
      message: Use typing_extensions.TypedDict instead.
  location:
    row: 17
    column: 19
  end_location:
    row: 17
    column: 28
  fix: ~
  parent: ~
- kind:
    BannedApi:
      name: typing.TypedDict
      message: Use typing_extensions.TypedDict instead.
  location:
    row: 22
    column: 0
  end_location:
    row: 22
    column: 16
  fix: ~
  parent: ~
- kind:
    BannedApi:
      name: typing.TypedDict
      message: Use typing_extensions.TypedDict instead.
  location:
    row: 24
    column: 0
  end_location:
    row: 24
    column: 16
  fix: ~
  parent: ~
- kind:
    BannedApi:
      name: typing.TypedDict
      message: Use typing_extensions.TypedDict instead.
  location:
    row: 27
    column: 0
  end_location:
    row: 27
    column: 16
  fix: ~
  parent: ~
- kind:
    BannedApi:
      name: typing.TypedDict
      message: Use typing_extensions.TypedDict instead.
  location:
    row: 29
    column: 0
  end_location:
    row: 29
    column: 16
  fix: ~
  parent: ~
- kind:
    BannedApi:
      name: typing.TypedDict
      message: Use typing_extensions.TypedDict instead.
  location:
    row: 33
    column: 0
  end_location:
    row: 33
    column: 28
  fix: ~
  parent: ~

